service-hello-kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-svc
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  externalIPs:
  - 192.168.2.30
  selector:
    app: hello-kubernetes
