ingress-hello-kubernetes.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: zuidugchelen.eu
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-first
          servicePort: 80
